--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "postcss": "^8.4.14",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "tailwindcss": "^3.0.24"
+    "recoil": "^0.7.3-alpha.2",
+    "tailwindcss": "^3.0.24",
+    "web3": "^1.7.3"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
@@ -23,6 +25,7 @@
     "@types/react-dom": "18.0.5",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
+    "eslint-config-prettier": "^8.5.0",
     "typescript": "4.6.4"
   }
 }
